# escape-abm

./: .clang-format  .cpush.json5  LICENSE  Makefile  README.md  README.rst  TODO.rst  pyproject.toml
docs/: formal-model.md  howto-setup-jupyterlab-locally.md  howto-setup-jupyterlab-locally.rst  howto-setup-jupyterlab-on-rivanna.md
examples/: example1.esl  example1.esl37  example2.esl  minimal.esl37  nodes.parquet  run-example1.ipynb
scripts/: README.rst  config_pb_dev.py  config_rivanna.py  parsl_helpers.py  prepare_input_common.py  prepare_input_pb_dev.py  prepare_input_rivanna.py  requirements.txt  temp_optuna_dash.py  temp_parsl_dash.py  temp_postgres.py
src/episim37/: alias_table.py  ast.py  ast1.py  ast2.py  check_ast.py  cli.py  click_helpers.py  codegen.jinja2  codegen.py  codegen_cpu.jinja2  codegen_cpu.py  codegen_openmp.py  errors.py  input_helpers.py  ir1.py  language_server.py  misc.py  output_helpers.py  parse_tree.py  prepare_input.py  process_output.py  simulator_cpp_cpu.jinja2  tree_sitter_bindings.py  utils.py
src/escape_abm/: ast.py  ast1.py  ast2.py  builtin.py  cli.py  click_helpers.py  codegen_openmp.py  environ.py  language_server.py  misc.py  output_helpers.py  parse_tree.py  scope.py  tree_sitter_bindings.py  type_check.py  type_check1.py  types.py  utils.py
tests/examples/: Makefile  example1.esl37  hello.esl37  minimal.esl37
tree-sitter-esl37/: Cargo.toml  Makefile  binding.gyp  grammar.js  package-lock.json  package.json
tree-sitter-esl37/corpus/: binary_expression1.txt  binary_expression2.txt  config1.txt  contagion.txt  contagion1.txt  device_statements.txt  dist_discrete1.txt  dist_normal1.txt  dist_uniform1.txt  distributions.txt  edge.txt  edge1.txt  edgeset1.txt  enum.txt  enum1.txt  expressions.txt  foreach.txt  func1.txt  func2.txt  function_call1.txt  functions.txt  global.txt  if_statement1.txt  literal1.txt  node.txt  node1.txt  nodeset1.txt  parenthesized_expression1.txt  print_statement1.txt  reduce.txt  (+8 more)
(+52 files in other folders)
