[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "escape-abm"
version = "0.0.2"
authors = [
  { name="Parantapa Bhattacharya", email="parantapa@virginia.edu" },
]
description = "Epidemic Simulator Compiler and Programming Environment"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click",
    "platformdirs",
    "rich",
    "tree-sitter",
    "tree-sitter-esl",
    "jinja2",
    "pygls",
    "platformdirs",
    "numpy",
    "scipy",
    "pandas",
    "pyarrow",
    "polars",
    "h5py",
    "typeguard",
    "pydantic"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "http://github.com/nssac/escape-abm"

[project.scripts]
esc = "escape_abm.cli:cli"
